# Prolet

./: .gitignore  1. 项目定位.md  README.md  pyproject.toml
.github/workflows/: build-deploy.yml  build-frontend.yml  sync-api.yml
reader/: config.json
scripts/: download-files.py  sync.py
src/prolet/: __init__.py  builder.py  config_manager.py  converter.py  downloader.py  main.py
tools/: build.py
